--- a/package.json
+++ b/package.json
@@ -1,10 +1,27 @@
 {
   "name": "magnetic-core",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Another Node.js framework",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "serve": "NODE_ENV=development nodemon src/index.ts --watch src/ --watch config/",
+    "compile": "npm run pre-build && tsc --project tsconfig.prod.json",
+    "build": "npm run build:prod",
+    "build:tsc": "npm run compile",
+    "build:dev": "npm run pre-build && NODE_ENV=development webpack --config ./webpack.development.config",
+    "build:prod": "npm run pre-build && NODE_ENV=production webpack --config ./webpack.production.config",
+    "start": "[ ! -d ./lib ] && npm run compile; node index.js",
+    "lint": "eslint src/**/*.ts",
+    "lint:fix": "eslint src/**/*.ts --fix",
+    "test": "env TS_NODE_PROJECT=\"tsconfig.testing.json\" mocha --config .mocharc.jsonc",
+    "test:watch": "env TS_NODE_PROJECT=\"tsconfig.testing.json\" mocha --config .mocharc.jsonc --watch",
+    "test:coverage": "nyc npm run test",
+    "prepare": "husky install",
+    "pre-build": "mkdir -p build/out build/prod build/dev",
+    "git:pre-commit": "npm run lint && npm run test",
+    "pre-commit": "npm run git:pre-commit",
+    "git:ignore-pre-commit": "git commit --no-verify",
+    "init:vscode": "mkdir -p .vscode; echo \"{\\\"telemetry.enableCrashReporter\\\":false,\\\"telemetry.enableTelemetry\\\":false,\\\"cSpell.language\\\":\\\"en,`echo $LANG | sed -r 's/_.*//'`\\\",\\\"cmake.configureOnOpen\\\":false,\\\"editor.defaultFormatter\\\":\\\"esbenp.prettier-vscode\\\",\\\"editor.formatOnSave\\\":true,\\\"editor.formatOnPaste\\\":false,\\\"files.watcherExclude\\\":{\\\"**/target\\\":true}}\" > .vscode/settings.json"
   },
   "repository": {
     "type": "git",
@@ -15,5 +32,55 @@
   "bugs": {
     "url": "https://github.com/Ferritejs/magnetic-core/issues"
   },
-  "homepage": "https://github.com/Ferritejs/magnetic-core#readme"
+  "homepage": "https://github.com/Ferritejs/magnetic-core#readme",
+  "directories": {
+    "base": "./build",
+    "out": "./build/out",
+    "dev": "./build/dev",
+    "prod": "./build/prod"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run git:pre-commit"
+    }
+  },
+  "devDependencies": {
+    "@istanbuljs/nyc-config-typescript": "^1.0.2",
+    "@types/chai": "^4.3.4",
+    "@types/mocha": "^10.0.1",
+    "@types/node": "^18.15.11",
+    "@types/webpack": "^5.28.0",
+    "@typescript-eslint/eslint-plugin": "^5.54.0",
+    "@typescript-eslint/parser": "^5.54.0",
+    "chai": "^4.3.7",
+    "eslint": "^8.35.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.7.0",
+    "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-import-resolver-custom-alias": "^1.3.0",
+    "eslint-import-resolver-typescript": "^3.5.3",
+    "eslint-import-resolver-webpack": "^0.13.2",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-optimize-regex": "^1.2.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-sonarjs": "^0.18.0",
+    "expose-loader": "^4.0.0",
+    "file-loader": "^6.2.0",
+    "husky": "^8.0.3",
+    "mocha": "^10.2.0",
+    "mocha-junit-reporter": "^2.2.0",
+    "prettier": "^2.8.4",
+    "source-map-support": "^0.5.21",
+    "ts-loader": "^9.4.2",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.1.2",
+    "tsconfig-paths-webpack-plugin": "^4.0.0",
+    "tslib": "^2.5.0",
+    "typescript": "^5.0.4",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-merge": "^5.8.0"
+  }
 }
