--- a/tsconfig.prod.json
+++ b/tsconfig.prod.json
@@ -2,12 +2,14 @@
   "compilerOptions": {
     "target": "ES2020",
     "module": "commonjs",
+    "experimentalDecorators": true,
+    "sourceMap": true,
     "rootDir": "./",
     "baseUrl": "./",
     "paths": {
       "~/*": ["./src/*"]
     },
-    "resolveJsonModule": true /* in case you are importing JSON files */,
+    "resolveJsonModule": true,
     "outDir": "./build",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
