Update scripts in package.json

--- a/package.json
+++ b/package.json
@@ -1,27 +1,26 @@
 {
   "name": "magnetic-core",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "A core library",
   "main": "dist/magnetic-core.js",
   "types": "dist/magnetic-core.d.ts",
   "scripts": {
-    "serve": "NODE_ENV=development nodemon src/index.ts --watch src/ --watch config/",
-    "compile": "npm run pre-build && tsc --declaration --project tsconfig.prod.json && mv ./dist/src/* ./dist && rm -r ./dist/src",
-    "clean": "rm -rf ./dist",
-    "build": "npm run clean && npm run compile",
+    "pre-publish": "npm run build",
+    "compile": "OUT=`echo 'console.log(require(\"./package.json\").directories.base)' | node -` && tsc --declaration --project tsconfig.prod.json && mv ./$OUT/src/* ./$OUT && rm -r ./$OUT/src",
+    "clean": "node ./bin/clean.js",
+    "pre-build": "node ./bin/pre-build.js",
+    "post-build": "node ./bin/post-build.js",
+    "build": "npm run clean && npm run compile && npm run post-build",
     "build:tsc": "npm run compile",
     "build:dev": "npm run pre-build && NODE_ENV=development webpack --config ./webpack.development.config",
     "build:prod": "npm run pre-build && NODE_ENV=production webpack --config ./webpack.production.config",
-    "start": "[ ! -d ./lib ] && npm run compile; node index.js",
     "lint": "eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix",
     "test": "env TS_NODE_PROJECT=\"tsconfig.testing.json\" mocha --config .mocharc.jsonc",
     "test:watch": "env TS_NODE_PROJECT=\"tsconfig.testing.json\" mocha --config .mocharc.jsonc --watch",
     "test:coverage": "nyc npm run test",
     "prepare": "husky install",
-    "pre-build": "mkdir -p build/out build/prod build/dev",
     "git:pre-commit": "npm run lint && npm run test",
-    "pre-commit": "npm run git:pre-commit",
     "git:ignore-pre-commit": "git commit --no-verify",
     "init:vscode": "mkdir -p .vscode; echo \"{\\\"telemetry.enableCrashReporter\\\":false,\\\"telemetry.enableTelemetry\\\":false,\\\"cSpell.language\\\":\\\"en,`echo $LANG | sed -r 's/_.*//'`\\\",\\\"cmake.configureOnOpen\\\":false,\\\"editor.defaultFormatter\\\":\\\"esbenp.prettier-vscode\\\",\\\"editor.formatOnSave\\\":true,\\\"editor.formatOnPaste\\\":false,\\\"files.watcherExclude\\\":{\\\"**/target\\\":true}}\" > .vscode/settings.json"
   },
@@ -36,7 +35,7 @@
   },
   "homepage": "https://github.com/Ferritejs/magnetic-core#readme",
   "directories": {
-    "base": "./build",
+    "base": "./dist",
     "dev": "./$base/dev",
     "test": "./$base/test",
     "prod": "./$base/prod"
@@ -70,6 +69,7 @@
     "eslint-plugin-sonarjs": "^0.18.0",
     "expose-loader": "^4.0.0",
     "file-loader": "^6.2.0",
+    "fs-extra": "^11.1.1",
     "husky": "^8.0.3",
     "mocha": "^10.2.0",
     "mocha-junit-reporter": "^2.2.0",
