--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "magnetic-core",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "A core library",
   "main": "dist/magnetic-core.js",
   "types": "dist/magnetic-core.d.ts",
   "scripts": {
-    "pre-publish": "npm run build",
     "compile": "OUT=`echo 'console.log(require(\"./package.json\").directories.base)' | node -` && tsc --declaration --project tsconfig.prod.json && mv ./$OUT/src/* ./$OUT && rm -r ./$OUT/src",
     "clean": "node ./bin/clean.js",
     "pre-build": "node ./bin/pre-build.js",
@@ -19,7 +18,7 @@
     "test": "env TS_NODE_PROJECT=\"tsconfig.testing.json\" mocha --config .mocharc.jsonc",
     "test:watch": "env TS_NODE_PROJECT=\"tsconfig.testing.json\" mocha --config .mocharc.jsonc --watch",
     "test:coverage": "nyc npm run test",
-    "prepare": "husky install",
+    "prepare": "husky install && npm run build",
     "git:pre-commit": "npm run lint && npm run test",
     "git:ignore-pre-commit": "git commit --no-verify",
     "init:vscode": "mkdir -p .vscode; echo \"{\\\"telemetry.enableCrashReporter\\\":false,\\\"telemetry.enableTelemetry\\\":false,\\\"cSpell.language\\\":\\\"en,`echo $LANG | sed -r 's/_.*//'`\\\",\\\"cmake.configureOnOpen\\\":false,\\\"editor.defaultFormatter\\\":\\\"esbenp.prettier-vscode\\\",\\\"editor.formatOnSave\\\":true,\\\"editor.formatOnPaste\\\":false,\\\"files.watcherExclude\\\":{\\\"**/target\\\":true}}\" > .vscode/settings.json"
