Update webpack files

--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "types": "magnetic-core.d.ts",
   "scripts": {
     "builder:clean": "node ./bin/clean.js",
-    "builder:pre-build": "node ./bin/pre-build.js",
+    "builder:pre-build": "npm run builder:clean && node ./bin/pre-build.js",
     "builder:compile": "DIST=`node ./bin/resolve.js base` && tsc --declaration --project tsconfig.prod.json && mv ./$DIST/src/* ./$DIST && rm -r ./$DIST/src",
     "builder:post-build": "DIST=`node ./bin/resolve.js base` && rm -r $DIST/dev $DIST/test $DIST/prod && node ./bin/post-build.js",
-    "build": "npm run builder:clean && npm run builder:pre-build && npm run builder:compile && npm run builder:post-build",
-    "builder:dev": "npm run pre-build && NODE_ENV=development webpack --config ./webpack.development.config",
-    "builder:prod": "npm run pre-build && NODE_ENV=production webpack --config ./webpack.production.config",
+    "build": " npm run builder:pre-build && npm run builder:compile && npm run builder:post-build",
+    "builder:dev": "npm run builder:pre-build && NODE_ENV=development webpack --config ./webpack.development.config",
+    "builder:prod": "npm run builder:pre-build && NODE_ENV=production webpack --config ./webpack.production.config",
     "lint": "eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix",
     "test": "env TS_NODE_PROJECT=\"tsconfig.testing.json\" mocha --config .mocharc.jsonc",
