--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "magnetic-core.js",
   "types": "magnetic-core.d.ts",
   "scripts": {
+    "dependencies:update": "node ./bin/update_dependencies.js",
     "builder:clean": "node ./bin/clean.js",
     "builder:pre-build": "npm run builder:clean && node ./bin/pre-build.js",
     "builder:compile": "DIST=`node ./bin/resolve.js base` && tsc --declaration --project tsconfig.prod.json && mv ./$DIST/src/* ./$DIST && rm -r ./$DIST/src",
@@ -48,39 +49,39 @@
     "@istanbuljs/nyc-config-typescript": "^1.0.2",
     "@types/chai": "^4.3.11",
     "@types/mocha": "^10.0.6",
-    "@types/node": "^20.10.4",
+    "@types/node": "^20.11.8",
     "@types/webpack": "^5.28.5",
-    "@typescript-eslint/eslint-plugin": "^6.13.2",
-    "@typescript-eslint/parser": "^6.13.2",
-    "chai": "^4.3.10",
-    "eslint": "^8.55.0",
+    "@typescript-eslint/eslint-plugin": "^6.19.1",
+    "@typescript-eslint/parser": "^6.19.1",
+    "chai": "^4.4.1",
+    "eslint": "^8.56.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-import-resolver-custom-alias": "^1.3.2",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-import-resolver-webpack": "^0.13.8",
-    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-optimize-regex": "^1.2.1",
-    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-sonarjs": "^0.23.0",
-    "expose-loader": "^4.1.0",
+    "expose-loader": "^5.0.0",
     "file-loader": "^6.2.0",
     "fs-extra": "^11.2.0",
-    "husky": "^8.0.3",
+    "husky": "^9.0.6",
     "mocha": "^10.2.0",
     "mocha-junit-reporter": "^2.2.1",
-    "prettier": "^3.1.0",
+    "prettier": "^3.2.4",
     "source-map-support": "^0.5.21",
     "ts-loader": "^9.5.1",
-    "ts-node": "^10.9.1",
+    "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "tsconfig-paths-webpack-plugin": "^4.1.0",
     "tslib": "^2.6.2",
     "typescript": "^5.3.3",
-    "webpack": "^5.89.0",
+    "webpack": "^5.90.0",
     "webpack-cli": "^5.1.4",
     "webpack-merge": "^5.10.0"
   }
