feat(build-tools)!: update scripts

--- a/package.json
+++ b/package.json
@@ -8,17 +8,17 @@
     "dependencies:update": "node ./bin/update_dependencies.js",
     "builder:clean": "node ./bin/clean.js",
     "builder:pre-build": "npm run builder:clean && node ./bin/pre-build.js",
-    "builder:compile": "DIST=`node ./bin/resolve.js base` && tsc --declaration --project tsconfig.prod.json && mv ./$DIST/src/* ./$DIST && rm -r ./$DIST/src",
-    "builder:post-build": "DIST=`node ./bin/resolve.js base` && rm -r $DIST/dev $DIST/test $DIST/prod && node ./bin/post-build.js",
-    "build": " npm run builder:pre-build && npm run builder:compile && npm run builder:post-build",
-    "builder:dev": "npm run builder:pre-build && NODE_ENV=development webpack --config ./webpack.development.config",
-    "builder:prod": "npm run builder:pre-build && NODE_ENV=production webpack --config ./webpack.production.config",
+    "builder:compile": "DIST=`node ./bin/resolve.js base` && BUNDLE=`node ./bin/resolve.js bundle` && tsc --declaration --project tsconfig.prod.json && mv $DIST/src/* $BUNDLE && rm -rf $DIST/src",
+    "builder:post-build": "node ./bin/post-build.js",
+    "build": "npm run builder:pre-build && npm run builder:compile && npm run builder:post-build",
+    "builder:dev": "DIST=`node ./bin/resolve.js base` && npm run builder:pre-build && NODE_ENV=dev webpack --config ./webpack.dev.config && rm -rf $DIST/{bundle,test,prod}",
+    "builder:prod": "DIST=`node ./bin/resolve.js base` && npm run builder:pre-build && NODE_ENV=prod webpack --config ./webpack.prod.config && rm -rf $DIST{bundle,test,dev}",
     "lint": "eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix",
     "test": "env TS_NODE_PROJECT=\"tsconfig.testing.json\" mocha --config .mocharc.jsonc",
     "test:watch": "env TS_NODE_PROJECT=\"tsconfig.testing.json\" mocha --config .mocharc.jsonc --watch",
     "test:coverage": "nyc npm run test",
-    "prepare": "husky install && build",
+    "prepare": "husky install",
     "git:pre-commit": "npm run lint && npm run test",
     "git:ignore-pre-commit": "git commit --no-verify",
     "init:vscode": "mkdir -p .vscode; echo \"{\\\"telemetry.enableCrashReporter\\\":false,\\\"cSpell.language\\\":\\\"en,ru,fr,de-de,it\\\",\\\"cmake.configureOnOpen\\\":false,\\\"editor.defaultFormatter\\\":\\\"esbenp.prettier-vscode\\\",\\\"editor.formatOnSave\\\":true,\\\"editor.formatOnPaste\\\":false,\\\"files.watcherExclude\\\":{\\\"**/target\\\":true},\\\"[typescript]\\\":{\\\"editor.defaultFormatter\\\":\\\"esbenp.prettier-vscode\\\",\\\"typescript.preferences.importModuleSpecifier\\\":\\\"shortest\\\"},\\\"cSpell.words\\\":[]}\" > .vscode/settings.json"
