--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
     "filename": "magnetic-core.ts"
   },
   "scripts": {
-    "dependencies:update": "node ./bin/update_dependencies.js",
-    "builder:clean": "node ./bin/clean.js",
-    "builder:pre-build": "npm run builder:clean && node ./bin/pre-build.js",
-    "builder:compile": "DIST=`node ./bin/resolve.js base` && BUNDLE=`node ./bin/resolve.js bundle` && tsc --declaration --project tsconfig.prod.json && mv $DIST/src/* $BUNDLE && rm -rf $DIST/src",
-    "builder:post-build": "node ./bin/post-build.js",
-    "build": "npm run builder:pre-build && npm run builder:compile && npm run builder:post-build",
-    "builder:dev": "DIST=`node ./bin/resolve.js base` && npm run builder:pre-build && NODE_ENV=dev webpack --config ./webpack.dev.config && rm -rf $DIST/{bundle,test,prod}",
-    "builder:prod": "DIST=`node ./bin/resolve.js base` && npm run builder:pre-build && NODE_ENV=prod webpack --config ./webpack.prod.config && rm -rf $DIST{bundle,test,dev}",
+    "update": "node ./bin/update_dependencies.js",
+    "clean": "node ./bin/clean.js",
+    "pre-build": "node ./bin/pre-build.js",
+    "compile": "DIST=`node ./bin/resolve.js base` && BUNDLE=`node ./bin/resolve.js bundle` && tsc --declaration --project tsconfig.prod.json && mv $DIST/src/* $BUNDLE && rm -rf $DIST/src",
+    "post-build": "node ./bin/post-build.js",
+    "build": "npm run build:package && npm run build:dev && npm run build:prod",
+    "build:package": " npm run pre-build -- `node ./bin/resolve.js bundle` && npm run compile && npm run post-build",
+    "build:dev": "DIST=`node ./bin/resolve.js base` && npm run pre-build -- `node ./bin/resolve.js dev` && NODE_ENV=dev webpack --config ./webpack.dev.config",
+    "build:prod": "DIST=`node ./bin/resolve.js base` && npm run pre-build -- `node ./bin/resolve.js prod` && NODE_ENV=prod webpack --config ./webpack.prod.config",
     "lint": "eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix",
     "test": "env TS_NODE_PROJECT=\"tsconfig.testing.json\" mocha --config .mocharc.jsonc",
@@ -25,7 +26,7 @@
     "prepare": "husky install",
     "git:pre-commit": "npm run lint && npm run test",
     "git:ignore-pre-commit": "git commit --no-verify",
-    "init:vscode": "mkdir -p .vscode; echo \"{\\\"telemetry.enableCrashReporter\\\":false,\\\"cSpell.language\\\":\\\"en,ru,fr,de-de,it\\\",\\\"cmake.configureOnOpen\\\":false,\\\"editor.defaultFormatter\\\":\\\"esbenp.prettier-vscode\\\",\\\"editor.formatOnSave\\\":true,\\\"editor.formatOnPaste\\\":false,\\\"files.watcherExclude\\\":{\\\"**/target\\\":true},\\\"[typescript]\\\":{\\\"editor.defaultFormatter\\\":\\\"esbenp.prettier-vscode\\\",\\\"typescript.preferences.importModuleSpecifier\\\":\\\"shortest\\\"},\\\"cSpell.words\\\":[]}\" > .vscode/settings.json"
+    "init:vscode": "node ./bin/init_vscode.js"
   },
   "repository": {
     "type": "git",
@@ -51,14 +52,14 @@
   },
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "^1.0.2",
-    "@types/chai": "^4.3.11",
+    "@types/chai": "^4.3.12",
     "@types/mocha": "^10.0.6",
-    "@types/node": "^20.11.8",
+    "@types/node": "^20.11.24",
     "@types/webpack": "^5.28.5",
-    "@typescript-eslint/eslint-plugin": "^6.19.1",
-    "@typescript-eslint/parser": "^6.19.1",
+    "@typescript-eslint/eslint-plugin": "^7.1.0",
+    "@typescript-eslint/parser": "^7.1.0",
     "chai": "^4.4.1",
-    "eslint": "^8.56.0",
+    "eslint": "^8.57.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-alias": "^1.1.2",
@@ -70,14 +71,14 @@
     "eslint-plugin-optimize-regex": "^1.2.1",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-sonarjs": "^0.23.0",
+    "eslint-plugin-sonarjs": "^0.24.0",
     "expose-loader": "^5.0.0",
     "file-loader": "^6.2.0",
     "fs-extra": "^11.2.0",
-    "husky": "^9.0.6",
-    "mocha": "^10.2.0",
+    "husky": "^9.0.11",
+    "mocha": "^10.3.0",
     "mocha-junit-reporter": "^2.2.1",
-    "prettier": "^3.2.4",
+    "prettier": "^3.2.5",
     "source-map-support": "^0.5.21",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
@@ -85,7 +86,7 @@
     "tsconfig-paths-webpack-plugin": "^4.1.0",
     "tslib": "^2.6.2",
     "typescript": "^5.3.3",
-    "webpack": "^5.90.0",
+    "webpack": "^5.90.3",
     "webpack-cli": "^5.1.4",
     "webpack-merge": "^5.10.0"
   }
